Actions
Bug #9241
closedsi3124: this statement may fall through
Start date:
2018-03-06
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
Issue found by gcc 7 build:
../../common/sys/sata/adapters/si3124/si3124var.h:274:5: error: this statement may fall through [-Werror=implicit-fallthrough=] if (si_debug_flags & (flag)) { \ ^ ../../common/io/sata/adapters/si3124/si3124.c:1835:3: note: in expansion of macro 'SIDBG_P' SIDBG_P(SIDBG_RESET, si_portp, ^~~~~~~ ../../common/io/sata/adapters/si3124/si3124.c:1839:2: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 7b839a17b133f5f15cfee0a4f16c5c8445d7fa25
commit 7b839a17b133f5f15cfee0a4f16c5c8445d7fa25 Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:40.000Z 9241 si3124: this statement may fall through Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Approved by: Robert Mustacchi <rm@joyent.com>
Actions